ratings bars now have text correctly aligned to the left of each bar

--- a/client/styles.css
+++ b/client/styles.css
@@ -61,7 +61,9 @@
   font-size: 25px;
   height: 25px;
   width: 100px;
-  margin: 0 auto;
+  margin: 0;
+  margin-bottom: 10px;
+  margin-left: 20px;
   position: relative;
   padding: 0;
   text-shadow: 0px 1px 0 #a2a2a2;
@@ -141,17 +143,31 @@
   background-color: lightgrey;
   height: 15px;
   width: 150px;
-  margin: 10px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-left: 10px;
 }
 
 .star-bar {
   background-color: black;
   z-index: 1;
   margin-left: 10px;
-  margin-top: -25px;
+  margin-top: -20px;
   height: 15px;
 }
 
-.bars-container {
-  margin-bottom: 10px;
+.bar-text {
+  width: 10px;
+  margin-bottom: -20px;
+  float: left;
+}
+
+.bar-container {
+  width: 170px;
+  height: 25px;
+}
+
+.averageScore {
+  text-align: center;
+  width: 150px;
 }
